{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 107,
  "lineage": "a358c6cb-0dc1-f41e-2bf9-2178295883ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "clip-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009726b835c24a3aa",
            "arn": "arn:aws:ec2:us-west-1:562462682229:instance/i-022f5f0087c6a989d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022f5f0087c6a989d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3c2479bea6e3c24",
            "private_dns": "ip-10-0-3-223.us-west-1.compute.internal",
            "private_ip": "10.0.3.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9f3cb2796f06b85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea6f5b1fc686cb20",
            "tags": {
              "Name": "clip-ec2"
            },
            "tags_all": {
              "Name": "clip-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0175b9b5f0720376f"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "aws_security_group.clip_ec2_sg",
            "aws_subnet.clip_private_subnet-3",
            "aws_vpc.clip_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clip_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:562462682229:security-group/sg-0175b9b5f0720376f",
            "description": "Security Group for ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0175b9b5f0720376f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clip_ec2_sg",
            "name_prefix": "",
            "owner_id": "562462682229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-02893f241e61cbf23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clip_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:562462682229:security-group/sg-03d1aefa28616e7d6",
            "description": "allow inbound access to the database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d1aefa28616e7d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "562462682229",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02893f241e61cbf23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.clip_private_subnet-3",
            "aws_vpc.clip_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clip_private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:562462682229:subnet/subnet-0c62c08bbfaea32ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c62c08bbfaea32ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562462682229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clip_private_subnet-1"
            },
            "tags_all": {
              "Name": "clip_private_subnet-1"
            },
            "vpc_id": "vpc-02893f241e61cbf23"
          },
          "dependencies": [
            "aws_vpc.clip_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clip_private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:562462682229:subnet/subnet-089d71756f777e684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089d71756f777e684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562462682229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clip_private_subnet-2"
            },
            "tags_all": {
              "Name": "clip_private_subnet-2"
            },
            "vpc_id": "vpc-02893f241e61cbf23"
          },
          "dependencies": [
            "aws_vpc.clip_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clip_private_subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:562462682229:subnet/subnet-0ea6f5b1fc686cb20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea6f5b1fc686cb20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562462682229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clip_private_subnet-3"
            },
            "tags_all": {
              "Name": "clip_private_subnet-3"
            },
            "vpc_id": "vpc-02893f241e61cbf23"
          },
          "dependencies": [
            "aws_vpc.clip_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "clip_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:562462682229:vpc/vpc-02893f241e61cbf23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba2370618d4e2c57",
            "default_route_table_id": "rtb-01a1f6f14721f2708",
            "default_security_group_id": "sg-02fbcd80d7e91f5f2",
            "dhcp_options_id": "dopt-05d2f9c3e9ab42215",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02893f241e61cbf23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a1f6f14721f2708",
            "owner_id": "562462682229",
            "tags": {
              "Name": "clip_vpc"
            },
            "tags_all": {
              "Name": "clip_vpc"
            }
          }
        }
      ]
    }
  ]
}